# warpbrowser

./: Cargo.toml  README.md
.github/workflows/: build-windows.yml
src/: browser_mapping.rs  browsers.rs  config.rs  link_processor.rs  main.rs  windows.rs
