[package]
name = "warpbrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.29"
dialoguer = "0.11.0"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
url = "2.5.4"
windows = { version = "0.59.0", features = ["Win32_System_SystemInformation"] }
winreg = "0.55.0"
